# ListInsights

./: .gitignore  README.md  datastore.json  dataviewer.py  main.py  mainwindow.py  pyproject.toml  tagged.json
resources/: qrc_resources.py
sample/: 4. Line Listing_01-Mar-2018 to 28-Feb-2023.xlsx  report.parquet  sample.parquet
src/: _shortlist.json  annotater.py  datastore.json  dataviewer.py  listinsight.py  main.py  mainwindow.py  shortlist.json  shortlister.py  tagger.py  test.py  test2.py
src/analyzer/: core.py  rules.py  utilities.py  validator.py
src/listinsight/: __init__.py  json_schema.py  listinsight.py  main.py  mainwindow.py  qtpy.py
src/listinsight/analyzer/: master_schema.json  schema.py
src/listinsight/dataviewer/: dataviewer.py  filter.py  json_model.py  shortlister.py  tagger.py
src/listinsight/resources/: qrc_resources.py
src/listinsight/utilities/: config.py  utils.py
src/resources/: qrc_resources.py
src/utilities/: utils.py
test/: __init__.py  countries_schema.json  countries_schema.yaml  datapackage.json  main.py  mainwindow.py  sample.csv  schema.yaml  tag.avsc  tagdef.avsc  tags.avro  test_analyzer.py  test_avro.py  test_draft.py  test_listinsight.py  test_pandera.py
