[project]
name = "listinsight"
version = "1.0.0-alpha"
description = ""
authors = [
    {name = "ghrimx",email = "debruycker.v@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "pyqt6 (>=6.8.1,<7.0.0)"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"




